--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <!--===== HOME =====-->
             <section class="home bd-grid" id="home">
                 <div class="home__data">
-                    <h1 class="home__title">Hi,<br>I'am <span class="home__title-color">Uday Raut</span><br> Web Designer</h1>
+                    <h1 class="home__title">Hi,<br>I'am <span class="home__title-color">Uday Raut</span><br> Ethical Hacker and Pentester</h1>
 
                     <a href="resume.jpg" class="button" download="resume.jpg">Resume</a>
                 </div>
